Changes to footer design

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,14 @@
 <footer class="module white footer-copy">
     <ul class="centered">
-        <li>Sirius is maintained by <a class="link" href="https://github.com/Comcast">Comcast</a></li>
-        <li><a href="http://www.github.com/comcast"><img src="images/octocat.png" alt="github logo"></a></li>
-        <li>This site was made with <a class="link" href="http://pages.github.com">GitHub Pages</a></li>
+    	<li>
+    		<a href="http://www.comcast.com"><img src="images/comcast-logo.png" alt="Comcast logo"></a>
+    	</li>
+    	<li>
+			<a href="http://www.github.com/comcast"><img src="images/octocat.png" alt="github logo"></a>
+    	</li>
     </ul>
+	<ul class="centered">
+	    <li>Sirius is maintained by <a class="link" href="https://github.com/Comcast">Comcast</a></li>
+	    <li>This site was made with <a class="link" href="http://pages.github.com">GitHub Pages</a></li>
+	</ul>
 </footer>
