Lazy commit message is lazy - various tweaks to styles

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,7 @@
-<footer class="module white footer-copy">
-    <ul class="centered">
-    	<li>
-    		<a href="http://www.comcast.com"><img src="images/comcast-logo.png" alt="Comcast logo"></a>
-    	</li>
-    	<li>
-			<a href="http://www.github.com/comcast"><img src="images/octocat.png" alt="github logo"></a>
-    	</li>
-    </ul>
+<footer class="module global-padding white footer-copy">
+	<a href="http://www.comcast.com"><img src="images/comcast-logo.png" alt="Comcast logo"></a>
 	<ul class="centered">
-	    <li>Sirius is maintained by <a class="link" href="https://github.com/Comcast">Comcast</a></li>
-	    <li>This site was made with <a class="link" href="http://pages.github.com">GitHub Pages</a></li>
+        <li>Sirius is maintained by <a class="link" href="https://github.com/Comcast">Comcast</a></li>
+	    <li>This site built using <a class="link" href="http://pages.github.com">GitHub Pages</a></li>
 	</ul>
 </footer>
