--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -109,7 +109,7 @@ http://www.webtype.com
     font-family: 'XFINITYSansBold';
     src: url('/styles/fonts/XFINITY-Sans-Bold/19ab5393-ad15-475d-97fd-ae2e7339e4e4-2.eot');
     src: url('/styles/fonts/XFINITY-Sans-Bold/19ab5393-ad15-475d-97fd-ae2e7339e4e4-2.eot?#iefix') format('embedded-opentype'),
-    //url('/styles/fonts/XFINITY-Sans-Bold/19ab5393-ad15-475d-97fd-ae2e7339e4e4-3.woff.woff') format('woff'),
+    //url('/styles/fonts/XFINITY-Sans-Bold/19ab5393-ad15-475d-97fd-ae2e7339e4e4-3.woff') format('woff'),
     //url('/styles/fonts/XFINITY-Sans-Bold/19ab5393-ad15-475d-97fd-ae2e7339e4e4-1.ttf') format('truetype'),
     url('/styles/fonts/XFINITY-Sans-Bold/19ab5393-ad15-475d-97fd-ae2e7339e4e4-4.svg') format('svg');
     font-weight: normal;
