Fixing corporate link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="module global-padding white footer-copy">
-	<a href="http://www.comcast.com"><img src="images/comcast-logo.png" alt="Comcast logo"></a>
+	<a href="http://corporate.comcast.com"><img src="images/comcast-logo.png" alt="Comcast logo"></a>
 	<ul class="centered">
         <li>Sirius is maintained by <a class="link" href="https://github.com/Comcast">Comcast</a></li>
 	    <li>This site built using <a class="link" href="http://pages.github.com">GitHub Pages</a></li>
