--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <header>
         <a class="logo" href="http://www.comcast.com"><img src="images/comcast-logo.png" alt="Comcast logo"></a>
         <nav class="global-padding">
-            <a class="nav-item link" href="http://www.comcast.com">Corporate</a>
+            <a class="nav-item link" href="http://corporate.comcast.com">Corporate</a>
             <a class="nav-item link" href="http://www.github.com/Comcast">Open Source</a>
             <a class="nav-item link" href="http://www.xfinitytv.comcast.net">Entertainment</a>
         </nav>
